--- a/app/src/main/res/layout/activity_my_accounts.xml
+++ b/app/src/main/res/layout/activity_my_accounts.xml
@@ -15,6 +15,15 @@
         android:layout_marginRight="20dp"
         android:text="My Account details here!" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="First Name" />
+
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
