--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -39,20 +39,19 @@
         android:layout_marginRight="20dp"
         android:text="+91 9916690003" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="20dp"
-        android:text="support@shoppingadviser.in
-"
-        android:textAllCaps="false"/>
 
+    <Button
+        android:id="@+id/btnFoo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="180dp"
+        android:text="support@shoppingadviser.in"
+/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="230dp"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="20dp"
         android:text="Monday - Friday: 08.00-20.00
