--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -9,11 +9,29 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.nidatazeen.shoppingadviser1.LandingPageActivity"
+    tools:context="com.example.tls.sampletwo.LandingPageActivity"
     tools:showIn="@layout/app_bar_landing_page">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome to ShoppingAdviser" />
+        android:text="Hello World!"
+        android:id="@+id/textView2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:id="@+id/button"
+        android:layout_marginTop="120dp"
+        android:layout_below="@+id/textView2"
+        android:layout_toEndOf="@+id/button2" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:id="@+id/button2"
+        android:layout_alignTop="@+id/button"
+        android:layout_toEndOf="@+id/textView2" />
 </RelativeLayout>
