grid view changes

--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -40,379 +40,22 @@
         android:layout_height="match_parent"
         android:layout_marginTop="70dp">
 
-        <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/container_scroll_view"
-            android:layout_width="wrap_content"
+
+        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff">
+            android:columnWidth="90dp"
+            android:numColumns="auto_fit"
+            android:verticalSpacing="10dp"
+            android:horizontalSpacing="10dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            />
 
 
-            <GridLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/GridLayout1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:columnCount="5"
-                android:rowCount="6"
-                android:orientation="horizontal"
-                tools:context=".GridXMLActivity">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
 
 
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View1"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:background="#f5f915"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_1"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View1"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView2"
-                        />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View2"
-                        android:layout_row="0"
-                        android:layout_column="1"
-                        android:background="#e75a5a"/>
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_2"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View2"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView1"
-                        />
-
-
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View3"
-                        android:layout_row="0"
-                        android:layout_column="2"
-                        android:background="#0fe252"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_3"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View3"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView3"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View4"
-                        android:layout_row="0"
-                        android:layout_column="3"
-                        android:background="#6ffce9"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_4"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View4"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView4"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View5"
-                        android:layout_row="0"
-                        android:layout_column="4"
-                        android:background="#ed17a9"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_5"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View5"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView5"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View6"
-                        android:layout_row="1"
-                        android:layout_column="0"
-                        android:background="#ea7f1b"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_6"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View6"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView6"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View7"
-                        android:layout_row="1"
-                        android:layout_column="1"
-                        android:background="#e951ca"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_7"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View7"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView7"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View8"
-                        android:layout_row="1"
-                        android:layout_column="2"
-                        android:background="#151bc4"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_8"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View8"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView8"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View9"
-                        android:layout_row="1"
-                        android:layout_column="3"
-                        android:background="#8cefec"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_1"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View9"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView9"
-                        />
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    >
-
-
-
-                    <View android:layout_marginTop="20dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/View10"
-                        android:layout_row="1"
-                        android:layout_column="4"
-                        android:background="#d398ef"/>
-
-
-
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/sample_10"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_alignTop="@id/View10"
-                        android:layout_centerInParent="true"
-                        android:paddingLeft="1dp"
-                        android:paddingRight="1dp"
-                        android:id="@+id/imageView10"
-                        />
-                </RelativeLayout>
-
-
-
-
-            </GridLayout>
-        </HorizontalScrollView>    </LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
-
-
