--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -8,12 +8,13 @@
     tools:context="com.example.nidatazeen.shoppingadviser1.AboutUsActivity">
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@drawable/ic1"
         android:layout_marginTop="85dp"
         />
+    <!--android:src="@drawable/ic1"-->
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
