--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -33,24 +33,28 @@
         android:id="@+id/button2"
         android:layout_below="@+id/textView2"
         android:layout_toStartOf="@+id/button" />
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="90dp"
+        android:padding="10dp">
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="70dp">
-
+        android:layout_marginTop="40dp">
 
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:columnWidth="90dp"
+            android:layout_width="1000dp"
+            android:layout_height="300dp"
+            android:columnWidth="100dp"
             android:numColumns="auto_fit"
-            android:verticalSpacing="10dp"
-            android:horizontalSpacing="10dp"
-            android:stretchMode="columnWidth"
+            android:verticalSpacing="100dp"
+            android:horizontalSpacing="40dp"
             android:gravity="center"
+            android:scrollbars="horizontal"
             />
 
 
@@ -58,4 +62,5 @@
 
 
     </LinearLayout>
+    </HorizontalScrollView>
 </RelativeLayout>
