--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -48,13 +48,14 @@
         <GridView xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="1000dp"
-            android:layout_height="300dp"
-            android:columnWidth="100dp"
+            android:layout_height="500dp"
+            android:columnWidth="200dp"
             android:numColumns="auto_fit"
-            android:verticalSpacing="100dp"
+            android:verticalSpacing="150dp"
             android:horizontalSpacing="40dp"
             android:gravity="center"
             android:scrollbars="horizontal"
+            android:descendantFocusability="blocksDescendants"
             />
 
 
