--- a/app/src/main/res/layout/content_landing_page.xml
+++ b/app/src/main/res/layout/content_landing_page.xml
@@ -17,7 +17,16 @@
         android:layout_height="wrap_content"
         android:text="Welcome to ShoppingAdviser"
         android:id="@+id/textView2" />
-
+    <ImageView
+        android:layout_marginLeft="-25dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:paddingLeft="1dp"
+        android:paddingRight="1dp"
+        android:id="@+id/test"
+        android:layout_alignParentTop="true"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
