--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -6,223 +6,270 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.nidatazeen.shoppingadviser1.ProductDetailActivityFragment"
+    tools:context="com.example.tls.sampletwo.ProductDetailActivity.SegmentedRadioGroup"
     tools:showIn="@layout/activity_product_detail">
 
+    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:id="@+id/container_scroll_view"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!-->-->
+
     <ImageView
-        android:layout_marginLeft="-25dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginRight="5dp"
         android:src="@drawable/sample_2"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:paddingLeft="1dp"
         android:paddingRight="1dp"
-        android:id="@+id/imageView12"
+        android:id="@+id/productImageViewLarge"
         android:layout_alignParentTop="true"/>
-        <!--android:layout_alignParentEnd="true"-->
-        <!--android:layout_marginEnd="156dp" -->
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="156dp" -->
 
 
     <TextView
         android:layout_width="wrap_content"
+        android:layout_marginRight="0dp"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Title"
-        android:id="@+id/textView3"
+        android:text="FTrendy Off White Anaarkali"
+        android:id="@+id/titletextview"
         android:layout_marginLeft="0dp"
-        android:layout_alignTop="@+id/imageView12"
-        android:layout_alignStart="@+id/textView4" />
+        android:layout_toEndOf="@+id/productImageViewLarge" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Seller Name"
-        android:id="@+id/textView4"
-        android:paddingRight="30dp"
-        android:layout_below="@+id/textView3"
-        android:layout_alignParentEnd="true" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Sold By:FTrendy"
+        android:id="@+id/soldbytextview"
+        android:paddingRight="0dp"
+        android:layout_below="@+id/titletextview"
+        android:layout_alignParentEnd="true"
+        android:layout_alignStart="@+id/titletextview" />
 
     <RatingBar
-        android:layout_width="45dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/ratingBar"
-        android:paddingRight="0.05dp"
+        android:paddingRight="0dp"
         android:numStars="5"
-        android:layout_below="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/soldbytextview"
+        android:layout_alignStart="@+id/soldbytextview"
         android:layerType="hardware"/>
 
     <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="2"
         android:layout_alignLeft="@+id/ratingBar"
         android:layout_below="@+id/ratingBar" />
 
-
-
+    <TextView
+        android:id="@+id/priceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rs.2,999"
+        android:textSize="18sp"
+        android:layout_alignStart="@+id/rating"
+        android:layout_below="@+id/rating"/>
+    <TextView
+        android:id="@+id/discountPriceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rs.1,793"
+        android:textSize="18sp"
+        android:layout_marginLeft="275dp"
+        android:layout_below="@+id/rating"/>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="70dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="50dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Qty"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/ratingBar"
-        android:layout_alignStart="@+id/ratingBar" />
-
-    <NumberPicker
-        android:layout_width="10dp"
-        android:layout_height="20dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginBottom="90dp"
         android:layout_marginTop="30dp"
-        android:id="@+id/numberPicker"
-        android:layout_below="@+id/ratingBar"
-        android:layout_alignEnd="@+id/ratingBar"
-        android:layout_alignBottom="@+id/imageView12"
-        android:orientation="horizontal" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="SKU"
-        android:layout_marginTop="60dp"
-        android:id="@+id/textView6"
-        android:layout_alignBottom="@+id/imageView12"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_marginBottom="0dp" />
+        android:text="Qty"
+        android:id="@+id/qtyTextView"
+        android:layout_below="@+id/rating"
+        android:layout_alignStart="@+id/rating" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add to Cart"
-        android:layout_marginTop="30dp"
-        android:id="@+id/button5"
-        android:layout_alignTop="@+id/textView5"
+        android:text="Buy Now"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="200dp"
+        android:id="@+id/buyNowbtn"
+        android:layout_below="@+id/qtyTextView"
         android:background="#157cf9"
-        android:layout_alignStart="@+id/textView5" />
+        />
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Category"
-        android:id="@+id/textView7"
-        android:layout_below="@+id/textView6"
-        android:layout_alignStart="@+id/textView6" />
+        android:text="SKU:3e42w4"
+        android:layout_marginTop="10dp"
+        android:id="@+id/sku"
+        android:layout_below="@+id/buyNowbtn"
+        android:layout_alignStart="@+id/qtyTextView"
+        />
+
+
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Tag"
-        android:id="@+id/textView8"
-        android:layout_below="@+id/textView7"
-        android:layout_alignStart="@+id/textView7"
+        android:text="Category:Indian Dress"
+        android:layout_marginTop="0dp"
+        android:id="@+id/categoryTextView"
+        android:layout_below="@+id/sku"
+        android:layout_alignStart="@+id/sku"
         />
 
     <TextView
-        android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="Rs.2,999"
-        android:textSize="18sp"
-        android:layout_alignTop="@+id/textView22"
-        android:layout_alignStart="@+id/ratingBar" />
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="60dp"
-        android:text="Rs.1,793"
-        android:textSize="18sp"
-        android:layout_below="@+id/ratingBar"
-        android:layout_alignEnd="@+id/ratingBar" />
-
-
-    <WebView
-        android:id="@+id/webView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.0"/>-->
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></LinearLayout>
-
-    <View
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/imageView12"
-        android:id="@+id/view"></View>
+        android:layout_marginTop="0dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Tag:Women"
+        android:id="@+id/tagTextView"
+        android:layout_below="@+id/categoryTextView"
+        android:layout_alignStart="@+id/categoryTextView"
+        android:layout_marginBottom="0dp"
+        />
 
     <GridView
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_below="@id/imageView12"
+        android:layout_below="@id/productImageViewLarge"
         android:numColumns="5"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="10dp"
         android:id="@+id/gridView"></GridView>
 
 
 
-    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/container_scroll_view"
+
+
+    <!--<ImageView-->
+    <!--android:src="@drawable/sample_4"-->
+    <!--android:layout_width="70dp"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:paddingLeft="0.5dp"-->
+    <!--android:paddingRight="0.5dp"-->
+    <!--android:id="@+id/imageView1"-->
+    <!--android:layout_below="@+id/imageView12" />-->
+    <!--<ImageView-->
+    <!--android:src="@drawable/sample_5"-->
+    <!--android:layout_width="50dp"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:paddingLeft="10dp"-->
+    <!--android:paddingRight="0.5dp"-->
+    <!--android:layout_marginRight="0.0001dp"-->
+    <!--android:id="@+id/imageView2"-->
+    <!--android:layout_alignTop="@+id/view"-->
+    <!--android:layout_toEndOf="@+id/gridView" />-->
+    <!--<ImageView-->
+    <!--android:src="@drawable/sample_6"-->
+    <!--android:layout_width="70dp"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:paddingLeft="0.5dp"-->
+    <!--android:paddingRight="0.5dp"-->
+    <!--android:id="@+id/imageView3"-->
+    <!--android:layout_alignTop="@+id/view"-->
+    <!--android:layout_alignEnd="@+id/gridView" />-->
+
+    <!--<ImageView-->
+    <!--android:src="@drawable/sample_9"-->
+    <!--android:layout_width="70dp"-->
+    <!--android:layout_height="50dp"-->
+    <!--android:paddingLeft="0.5dp"-->
+    <!--android:paddingRight="0.5dp"-->
+    <!--android:id="@+id/imageView4"-->
+    <!--android:layout_below="@+id/textView6"-->
+    <!--android:layout_toStartOf="@+id/textView12" />-->
+
+    <com.example.nidatazeen.shoppingadviser1.SegmentedRadioGroup
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/textView7"/>
-
-
-    <ImageView
-
-        android:src="@drawable/sample_4"
-        android:layout_width="70dp"
         android:layout_height="50dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
-        android:id="@+id/imageView1"
-        android:layout_below="@+id/imageView12" />
-    <ImageView
-        android:src="@drawable/sample_5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="0.5dp"
-        android:layout_marginRight="0.0001dp"
-        android:id="@+id/imageView2"
-        android:layout_alignTop="@+id/view"
-        android:layout_toEndOf="@+id/gridView" />
-    <ImageView
-        android:src="@drawable/sample_6"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
-        android:id="@+id/imageView3"
-        android:layout_alignTop="@+id/view"
-        android:layout_alignEnd="@+id/gridView" />
+        android:orientation="horizontal"
+        android:id="@+id/segment_text"
+        android:checkedButton="@+id/descriptionRadiobutton"
+        android:focusable="true"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/gridView"
+        >
 
-    <ImageView
-        android:src="@drawable/sample_9"
-        android:layout_width="70dp"
-        android:layout_height="50dp"
-        android:paddingLeft="0.5dp"
-        android:paddingRight="0.5dp"
-        android:id="@+id/imageView4"
-        android:layout_below="@+id/textView6"
-        android:layout_toStartOf="@+id/textView12" />
+        <RadioButton
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:id="@+id/descriptionRadiobutton"
+            android:text="Description"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:button="@null"
+            android:gravity="center"
+            android:layout_marginTop="0dp"
+            android:textColor="#01A9DB"
+            android:layout_below="@+id/tagTextView"
+            android:layout_gravity="center_vertical"
+            android:clickable="true"
+            android:checked="true" />
+        <RadioButton
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:id="@+id/additionalInfoRadioButton"
+            android:text="Additional Info"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_marginTop="0dp"
+            android:button="@null"
+            android:gravity="center"
+            android:textColor="#01A9DB"
+            android:layout_gravity="center_vertical"
+            android:checked="false" />
+        <RadioButton
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:id="@+id/productEnquiryRadioButton"
+            android:text="Product Enquiry"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:button="@null"
+            android:layout_marginTop="0dp"
+            android:gravity="center"
+            android:textColor="#01A9DB"
+            android:layout_gravity="center_vertical"
+            android:checked="false" />
+
+        <RadioButton
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:id="@+id/sellerInfoRadioButton"
+            android:text="Seller Info"
+            android:layout_marginTop="0dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:button="@null"
+            android:gravity="center"
+            android:textColor="#01A9DB"
+            android:layout_gravity="center_vertical"
+            android:checked="false" />
 
 
 
+    </com.example.nidatazeen.shoppingadviser1.SegmentedRadioGroup>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="phone"
+        android:ems="5"
+        android:id="@+id/editText"
+        android:layout_below="@+id/priceTextView"
+        android:layout_toEndOf="@+id/qtyTextView" />
+    <!--</ScrollView>-->
 </RelativeLayout>
-
