--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -153,123 +153,19 @@
         android:verticalSpacing="0dp"
         android:horizontalSpacing="10dp"
         android:id="@+id/gridView"></GridView>
-
-
-
-
-
-    <!--<ImageView-->
-    <!--android:src="@drawable/sample_4"-->
-    <!--android:layout_width="70dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:paddingLeft="0.5dp"-->
-    <!--android:paddingRight="0.5dp"-->
-    <!--android:id="@+id/imageView1"-->
-    <!--android:layout_below="@+id/imageView12" />-->
-    <!--<ImageView-->
-    <!--android:src="@drawable/sample_5"-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:paddingLeft="10dp"-->
-    <!--android:paddingRight="0.5dp"-->
-    <!--android:layout_marginRight="0.0001dp"-->
-    <!--android:id="@+id/imageView2"-->
-    <!--android:layout_alignTop="@+id/view"-->
-    <!--android:layout_toEndOf="@+id/gridView" />-->
-    <!--<ImageView-->
-    <!--android:src="@drawable/sample_6"-->
-    <!--android:layout_width="70dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:paddingLeft="0.5dp"-->
-    <!--android:paddingRight="0.5dp"-->
-    <!--android:id="@+id/imageView3"-->
-    <!--android:layout_alignTop="@+id/view"-->
-    <!--android:layout_alignEnd="@+id/gridView" />-->
-
-    <!--<ImageView-->
-    <!--android:src="@drawable/sample_9"-->
-    <!--android:layout_width="70dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:paddingLeft="0.5dp"-->
-    <!--android:paddingRight="0.5dp"-->
-    <!--android:id="@+id/imageView4"-->
-    <!--android:layout_below="@+id/textView6"-->
-    <!--android:layout_toStartOf="@+id/textView12" />-->
-
-    <com.example.nidatazeen.shoppingadviser1.SegmentedRadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:id="@+id/segment_text"
-        android:checkedButton="@+id/descriptionRadiobutton"
-        android:focusable="true"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/gridView"
-        >
-
-        <RadioButton
-            android:layout_width="90dp"
-            android:layout_height="50dp"
-            android:id="@+id/descriptionRadiobutton"
-            android:text="Description"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:button="@null"
-            android:gravity="center"
-            android:layout_marginTop="0dp"
-            android:textColor="#01A9DB"
-            android:layout_below="@+id/tagTextView"
-            android:layout_gravity="center_vertical"
-            android:clickable="true"
-            android:checked="true" />
-        <RadioButton
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:id="@+id/additionalInfoRadioButton"
-            android:text="Additional Info"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_marginTop="0dp"
-            android:button="@null"
-            android:gravity="center"
-            android:textColor="#01A9DB"
-            android:layout_gravity="center_vertical"
-            android:checked="false" />
-        <RadioButton
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:id="@+id/productEnquiryRadioButton"
-            android:text="Product Enquiry"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:button="@null"
-            android:layout_marginTop="0dp"
-            android:gravity="center"
-            android:textColor="#01A9DB"
-            android:layout_gravity="center_vertical"
-            android:checked="false" />
-
-        <RadioButton
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:id="@+id/sellerInfoRadioButton"
-            android:text="Seller Info"
-            android:layout_marginTop="0dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:button="@null"
-            android:gravity="center"
-            android:textColor="#01A9DB"
-            android:layout_gravity="center_vertical"
-            android:checked="false" />
-
-
-
-    </com.example.nidatazeen.shoppingadviser1.SegmentedRadioGroup>
-
-    <EditText
-        android:layout_width="wrap_content"
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/tagTextView"
         android:layout_height="wrap_content"
-        android:inputType="phone"
-        android:ems="5"
-        android:id="@+id/editText"
-        android:layout_below="@+id/priceTextView"
-        android:layout_toEndOf="@+id/qtyTextView" />
+        android:layout_width="wrap_content"/>
+    <!--<EditText-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:inputType="phone"-->
+        <!--android:ems="5"-->
+        <!--android:id="@+id/editText"-->
+        <!--android:layout_below="@+id/priceTextView"-->
+        <!--android:layout_toEndOf="@+id/qtyTextView" />-->
     <!--</ScrollView>-->
 </RelativeLayout>
