--- a/app/src/main/res/layout/griditem.xml
+++ b/app/src/main/res/layout/griditem.xml
@@ -13,14 +13,12 @@ android:orientation="vertical" >
     <ImageView
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp"
-        android:src="@drawable/sample_1"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:id="@+id/productimageView"
         android:focusable="false"
         android:background="#ffeef7f0"
+        android:scaleType="fitCenter"
         android:focusableInTouchMode="false"
         />
 
