--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -1,3 +1,13 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container_scroll_view"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentTop="true"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,23 +19,14 @@
     tools:context="com.example.tls.sampletwo.ProductDetailActivity.SegmentedRadioGroup"
     tools:showIn="@layout/activity_product_detail">
 
-    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:id="@+id/container_scroll_view"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_alignParentTop="true"-->
-    <!-->-->
-
     <ImageView
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="5dp"
-        android:src="@drawable/sample_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="1dp"
-        android:paddingRight="1dp"
+        android:layout_marginRight="0dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:id="@+id/productImageViewLarge"
-        android:layout_alignParentTop="true"/>
+        android:layout_alignParentTop="true"
+        android:scaleType="fitCenter"/>
     <!--android:layout_alignParentEnd="true"-->
     <!--android:layout_marginEnd="156dp" -->
 
@@ -83,7 +84,7 @@
         android:layout_height="wrap_content"
         android:text="Rs.1,793"
         android:textSize="18sp"
-        android:layout_marginLeft="275dp"
+        android:layout_marginLeft="330dp"
         android:layout_below="@+id/rating"/>
 
 
@@ -102,7 +103,7 @@
         android:layout_height="wrap_content"
         android:text="Buy Now"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="200dp"
+        android:layout_marginLeft="250dp"
         android:id="@+id/buyNowbtn"
         android:layout_below="@+id/qtyTextView"
         android:background="#157cf9"
@@ -155,10 +156,10 @@
         android:id="@+id/gridView"></GridView>
     <ExpandableListView
         android:id="@+id/lvExp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         android:layout_below="@id/tagTextView"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+        android:layout_height="1000dp"
+        android:layout_width="match_parent"/>
     <!--<EditText-->
         <!--android:layout_width="wrap_content"-->
         <!--android:layout_height="wrap_content"-->
@@ -169,3 +170,5 @@
         <!--android:layout_toEndOf="@+id/qtyTextView" />-->
     <!--</ScrollView>-->
 </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
