detail page changes

--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -19,18 +19,6 @@
     tools:context="com.example.tls.sampletwo.ProductDetailActivity.SegmentedRadioGroup"
     tools:showIn="@layout/activity_product_detail">
 
-    <ImageView
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:id="@+id/productImageViewLarge"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitCenter"/>
-    <!--android:layout_alignParentEnd="true"-->
-    <!--android:layout_marginEnd="156dp" -->
-
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_marginRight="0dp"
@@ -38,8 +26,32 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="FTrendy Off White Anaarkali"
         android:id="@+id/titletextview"
+        android:layout_marginLeft="0dp"/>
+        <!--android:layout_toEndOf="@+id/productImageViewLarge" -->
+        <!--/>-->
+
+    <ImageView
         android:layout_marginLeft="0dp"
-        android:layout_toEndOf="@+id/productImageViewLarge" />
+        android:layout_marginRight="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/productImageViewLarge"
+        android:scaleType="fitXY"
+        android:layout_below="@+id/titletextview"
+        android:layout_marginTop="20dp"
+        />
+    <!--android:layout_alignParentEnd="true"-->
+    <!--android:layout_marginEnd="156dp" -->
+
+
+    <GridView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_below="@id/productImageViewLarge"
+        android:numColumns="5"
+        android:verticalSpacing="0dp"
+        android:horizontalSpacing="10dp"
+        android:id="@+id/gridView"></GridView>
 
     <TextView
         android:layout_width="wrap_content"
@@ -48,27 +60,33 @@
         android:text="Sold By:FTrendy"
         android:id="@+id/soldbytextview"
         android:paddingRight="0dp"
-        android:layout_below="@+id/titletextview"
+        android:layout_below="@+id/gridView"
         android:layout_alignParentEnd="true"
-        android:layout_alignStart="@+id/titletextview" />
+        android:layout_alignStart="@+id/titletextview"
+        android:layout_marginTop="40dp"
+        />
 
     <RatingBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ratingBar"
-        android:paddingRight="0dp"
+        android:paddingLeft="-10dp"
         android:numStars="5"
         android:layout_below="@+id/soldbytextview"
         android:layout_alignStart="@+id/soldbytextview"
-        android:layerType="hardware"/>
+        android:layerType="hardware"
+        android:layout_marginTop="20dp"
+        />
 
     <TextView
         android:id="@+id/rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2"
-        android:layout_alignLeft="@+id/ratingBar"
-        android:layout_below="@+id/ratingBar" />
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/soldbytextview"
+        android:layout_marginTop="40dp"
+        android:textSize="18sp"
+        />
 
     <TextView
         android:id="@+id/priceTextView"
@@ -76,34 +94,48 @@
         android:layout_height="wrap_content"
         android:text="Rs.2,999"
         android:textSize="18sp"
-        android:layout_alignStart="@+id/rating"
-        android:layout_below="@+id/rating"/>
+        android:layout_alignStart="@+id/ratingBar"
+        android:layout_below="@+id/ratingBar"
+        android:layout_marginTop="20dp"
+        />
     <TextView
         android:id="@+id/discountPriceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Rs.1,793"
         android:textSize="18sp"
-        android:layout_marginLeft="330dp"
-        android:layout_below="@+id/rating"/>
-
+        android:layout_below="@+id/ratingBar"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="220dp"
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:text="Qty"
         android:id="@+id/qtyTextView"
-        android:layout_below="@+id/rating"
-        android:layout_alignStart="@+id/rating" />
+        android:layout_below="@+id/priceTextView"
+        android:layout_alignStart="@+id/ratingBar" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="phone"
+        android:ems="5"
+        android:id="@+id/editText"
+        android:layout_below="@+id/priceTextView"
+        android:layout_toEndOf="@+id/qtyTextView"
+        android:focusable = "false"
+        android:layout_marginLeft="50dp"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Buy Now"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="250dp"
         android:id="@+id/buyNowbtn"
         android:layout_below="@+id/qtyTextView"
         android:background="#157cf9"
@@ -115,7 +147,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="SKU:3e42w4"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/sku"
         android:layout_below="@+id/buyNowbtn"
         android:layout_alignStart="@+id/qtyTextView"
@@ -128,7 +160,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Category:Indian Dress"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="20dp"
         android:id="@+id/categoryTextView"
         android:layout_below="@+id/sku"
         android:layout_alignStart="@+id/sku"
@@ -137,7 +169,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="20dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Tag:Women"
         android:id="@+id/tagTextView"
@@ -146,28 +178,14 @@
         android:layout_marginBottom="0dp"
         />
 
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_below="@id/productImageViewLarge"
-        android:numColumns="5"
-        android:verticalSpacing="0dp"
-        android:horizontalSpacing="10dp"
-        android:id="@+id/gridView"></GridView>
+
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_marginTop="50dp"
         android:layout_below="@id/tagTextView"
         android:layout_height="1000dp"
         android:layout_width="match_parent"/>
-    <!--<EditText-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:inputType="phone"-->
-        <!--android:ems="5"-->
-        <!--android:id="@+id/editText"-->
-        <!--android:layout_below="@+id/priceTextView"-->
-        <!--android:layout_toEndOf="@+id/qtyTextView" />-->
+
     <!--</ScrollView>-->
 </RelativeLayout>
         </LinearLayout>
